--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,19 @@ dependencies:
   equatable: ^2.0.5
   uuid: ^4.2.2
   freezed_annotation: ^2.4.1
-  flutter_bloc: ^8.1.3
   lottie: 2.7.0
-  social_login_buttons:
-  flutter_social_button: 
   font_awesome_flutter: 10.6.0
+  bloc: ^8.1.2 
+  flutter_bloc: ^8.1.3
+  replay_bloc: 0.2.5
+  hydrated_bloc: ^9.1.3 
   media_query_core:
     path: packages/media_query_core
+  mustache_hub_core:
+    path: packages/mustache_hub_core
+
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
   
 
 dev_dependencies:
