--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   replay_bloc: 0.2.5
   hydrated_bloc: ^9.1.3 
+  built_collection: 5.1.1
   media_query_core:
     path: packages/media_query_core
   mustache_hub_core:
@@ -65,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/visual_identity/logo.PNG
-    - assets/lottie/login_animation.json
+    - assets/lottie/
     - assets/
   #   - images/a_dot_ham.jpeg
 
