--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   replay_bloc: 0.2.5
   hydrated_bloc: ^9.1.3 
-  built_collection: 5.1.1
+  go_router: 13.0.1
   media_query_core:
     path: packages/media_query_core
   mustache_hub_core:
