--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   replay_bloc: 0.2.5
   hydrated_bloc: ^9.1.3 
   go_router: 13.0.1
+  enchanted_collection: 
   media_query_core:
     path: packages/media_query_core
   mustache_hub_core:
