--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   hydrated_bloc: ^9.1.3 
   go_router: 13.0.1
   enchanted_collection: 
+  flutter_animate:
   media_query_core:
     path: packages/media_query_core
   mustache_hub_core:
@@ -30,6 +31,7 @@ dependencies:
 
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
+  flex_color_scheme: ^7.3.1
   
 
 dev_dependencies:
@@ -67,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/visual_identity/logo.PNG
+    - assets/lottie/auth/
     - assets/lottie/
     - assets/
   #   - images/a_dot_ham.jpeg
