--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   go_router: 13.0.1
   enchanted_collection: 
   flutter_animate:
+  fluttertoast: ^8.2.4
   media_query_core:
     path: packages/media_query_core
   mustache_hub_core:
