--- a/packages/media_query_core/pubspec.yaml
+++ b/packages/media_query_core/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.2 
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
