--- a/packages/text_analyser/pubspec.yaml
+++ b/packages/text_analyser/pubspec.yaml
@@ -14,10 +14,8 @@ dependency_overrides:
 
 # Add regular dependencies here.
 dependencies:
-  enchanted_regex: ^1.0.4
-  freezed_annotation: ^2.4.1
-  build_runner: ^2.3.3 
-  freezed: ^2.3.2
+  enchanted_regex: ^1.0.5
+  freezed_annotation: ^2.4.1 
   mustache_hub_core:
     path: ../mustache_hub_core
   mustachex:
@@ -28,3 +26,6 @@ dependencies:
 dev_dependencies:
   lints: ^2.1.0
   test: ^1.24.0
+  build_runner: ^2.3.3 
+  freezed: ^2.3.2
+  json_serializable: ^6.7.1
