--- a/packages/mustache_hub_core/pubspec.yaml
+++ b/packages/mustache_hub_core/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
  
 dependencies:
   equatable: ^2.0.5
-  uuid: ^4.2.2
+  uuid: ^4.3.3
   freezed_annotation: ^2.4.1
   mason:
     path: ../../cloned_apis/mason
@@ -16,5 +16,6 @@ dependencies:
 dev_dependencies:
   lints: ^2.1.0
   test: ^1.24.0
+  json_serializable: ^6.7.1
   build_runner: ^2.3.3 
   freezed: ^2.3.2
