--- a/packages/text_analyser/pubspec.yaml
+++ b/packages/text_analyser/pubspec.yaml
@@ -11,6 +11,7 @@ dependency_overrides:
   mustachex: 
     path: ../../cloned_apis/mustachex  
   enchanted_collection: 1.3.0
+  collection:
 
 # Add regular dependencies here.
 dependencies:
