--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     path: packages/text_analyser
   uuid: ^4.3.3
   freezed_annotation: ^2.4.1
+  animated_tree_view: 2.2.0
   lottie: ^2.7.0
   font_awesome_flutter: ^10.6.0
   bloc: ^8.1.2 
