--- a/packages/mustache_hub_core/pubspec.yaml
+++ b/packages/mustache_hub_core/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
  
 dependencies:
   equatable: ^2.0.5
+  collection:
   uuid: ^4.3.3
   json_annotation: 4.9.0
   freezed_annotation: ^2.4.1
