--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   firebase_storage: ^11.6.0
   cloud_firestore: ^4.15.9
   flex_color_scheme: ^7.3.1
+  collection:
   
 
 dev_dependencies:
