--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,7 +20,7 @@
         "**/CHANGELOG.md": true, 
         "**/.flutter-plugins": true, 
         "**/.flutter-plugins-dependencies": true,
-        "**/pubspec.lock": true,
+        // "**/pubspec.lock": true,
         // "**/analysis_options.yaml": true,
         "**/.gitignore": true, 
     },
