--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,12 @@ version: 1.0.0+1
 
 dependency_overrides: 
   uuid: ^4.3.3
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.1
+  cloud_firestore: ^5.1.0
+  firebase_crashlytics: ^4.0.3
+
   mustachex: 
     path: cloned_apis/mustachex  
 
@@ -56,12 +62,15 @@ dependencies:
   mason: 
     path: cloned_apis/mason
 
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  firebase_storage: ^11.6.0
-  cloud_firestore: ^4.15.9
+  firebase_core: ^3.2.0
+  firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.1
+  cloud_firestore: ^5.1.0
+  firebase_crashlytics: ^4.0.3
+  firebase_analytics: ^11.2.0
   flex_color_scheme: ^7.3.1
   collection:
+
   
 
 dev_dependencies:
