--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,10 +6,10 @@
         "**/*.g.dart": true,
         "**/*.h.dart": true,
         "**/android/": true,
-        // "**/ios/": true,
+        "**/ios/": true,
         "**/linux/": true,
-        // "**/macos/": true,
-        "**/build/": true,
+        "**/macos/": true,
+        // "**/build/": true,
         "**/web/": true,
         "**/windows/": true,
         "**/.idea/": true,
@@ -20,8 +20,8 @@
         "**/CHANGELOG.md": true, 
         "**/.flutter-plugins": true, 
         "**/.flutter-plugins-dependencies": true,
-        // "**/pubspec.lock": true,
-        // "**/analysis_options.yaml": true,
+        "**/pubspec.lock": true,
+        "**/analysis_options.yaml": true,
         "**/.gitignore": true, 
     },
     "editor.codeActionsOnSave": {
