--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
         "**/linux/": true,
         "**/macos/": true,
         // "**/build/": true,
-        "**/web/": true,
+        // "**/web/": true,
         "**/windows/": true,
         "**/.idea/": true,
         "**/.dart_tool/": true,
