--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mustachehub
 description: "A easy, logic-less text template viewer/builder."
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.1
 
 dependency_overrides: 
   uuid: ^4.3.3
@@ -34,7 +34,7 @@ dependencies:
   replay_bloc: ^0.2.5
   enchanted_regex: ^1.0.7
   hydrated_bloc: ^9.1.3 
-  go_router: ^13.0.1
+  go_router: ^14.2.1
   google_fonts: ^6.2.1
   enchanted_collection: 1.3.0
   simple_platform: ^1.0.1
