--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.hub.mustache.mustachehub.RunnerTests</string>
+	<string>com.hub.mustache.mustachehub</string>
 	<key>PROJECT_ID</key>
 	<string>mustache-hub---prod</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:667846746873:ios:0270be1f53df165eacf828</string>
+	<string>1:667846746873:ios:c957e21d6863b221acf828</string>
 </dict>
 </plist>
