--- a/packages/media_query_core/pubspec.yaml
+++ b/packages/media_query_core/pubspec.yaml
@@ -10,13 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^8.1.2 
-  flutter_bloc: ^8.1.3
+  bloc:
+  flutter_bloc:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
