--- a/packages/mustache_firebase_references/pubspec.yaml
+++ b/packages/mustache_firebase_references/pubspec.yaml
@@ -10,12 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.2.0
-  cloud_firestore: ^5.1.0
+  firebase_core:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints:
 
 flutter:
