--- a/packages/mustache_hub_core/pubspec.yaml
+++ b/packages/mustache_hub_core/pubspec.yaml
@@ -7,17 +7,17 @@ environment:
   sdk: ^3.2.3
  
 dependencies:
-  equatable: ^2.0.5
+  equatable:
   collection:
-  uuid: ^4.3.3
-  json_annotation: 4.9.0
-  freezed_annotation: ^2.4.1
+  uuid:
+  json_annotation:
+  freezed_annotation:
   mason:
     path: ../../cloned_apis/mason
 
 dev_dependencies:
-  lints: ^2.1.0
-  test: ^1.24.0
-  json_serializable: ^6.7.1
-  build_runner: ^2.3.3 
-  freezed: ^2.3.2
+  lints:
+  test:
+  json_serializable:
+  build_runner:
+  freezed:
