--- a/packages/mustache_source_service/pubspec.yaml
+++ b/packages/mustache_source_service/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
     path: ../mustache_hub_core
   mustache_firebase_references:
     path: ../mustache_firebase_references
-  firebase_core: ^3.2.0
-  cloud_firestore: ^5.1.0
+  firebase_core:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0 
+  flutter_lints:
 
 flutter:
