--- a/packages/text_analyser/pubspec.yaml
+++ b/packages/text_analyser/pubspec.yaml
@@ -10,13 +10,13 @@ dependency_overrides:
   uuid: ^4.3.3
   mustachex: 
     path: ../../cloned_apis/mustachex  
-  enchanted_collection: 1.3.0 
+  enchanted_collection:
 
 # Add regular dependencies here.
 dependencies:
-  enchanted_regex: ^1.0.7
-  freezed_annotation: ^2.4.1 
-  enchanted_collection: 1.3.0
+  enchanted_regex:
+  freezed_annotation:
+  enchanted_collection:
   collection:
   mustache_hub_core:
     path: ../mustache_hub_core
@@ -26,8 +26,8 @@ dependencies:
     path: ../../cloned_apis/mason
 
 dev_dependencies:
-  lints: ^2.1.0
-  test: ^1.24.0
-  build_runner: ^2.3.3 
-  freezed: ^2.3.2
-  json_serializable: ^6.7.1
+  lints:
+  test:
+  build_runner:
+  freezed:
+  json_serializable:
