--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,43 +11,82 @@ dependency_overrides:
   firebase_storage: ^12.1.1
   cloud_firestore: ^5.1.0
   firebase_crashlytics: ^4.0.3
+  meta: 1.15.0
+  test_api: ^0.7.3
+  cupertino_icons: ^1.0.8
+  equatable: ^2.0.5
+  freezed_annotation: ^2.4.4
+  animated_tree_view: ^2.2.0
+  lottie: ^3.1.2
+  font_awesome_flutter: ^10.7.0
+  bloc: ^8.1.4
+  flutter_bloc: ^8.1.6
+  replay_bloc: ^0.2.7
+  enchanted_regex: ^1.0.7
+  json_annotation: ^4.9.0
+  hydrated_bloc: ^9.1.5
+  go_router: ^14.2.1
+  google_fonts: ^6.2.1
+  enchanted_collection: ^1.3.0
+  simple_platform: ^1.0.1
+  image_network: ^2.5.6
+  image_picker: ^1.1.2
+  image_picker_for_web: ^3.0.4
+  flutter_animate: ^4.5.0
+  url_launcher: ^6.3.0
+  fluttertoast: ^8.2.6
+  dart_debouncer: ^1.1.0
+  dotted_border: ^2.1.0
+  cursor_autocomplete_options: ^1.5.0
+  path_provider: ^2.1.3
+  flex_color_scheme: ^7.3.1
+  collection: ^1.19.0
+  flutter_lints: ^4.0.0
+  flutter_launcher_icons: "^0.13.1"
+  build_runner: ^2.4.11
+  json_serializable: ^6.8.0
+  freezed: ^2.5.7
+  test: ^1.25.8
+  lints: ^4.0.0 
 
   mustachex: 
     path: cloned_apis/mustachex  
 
 environment:
-  sdk: '>=3.2.3 <4.0.0' 
+  sdk: '>=3.4.4 <4.0.0'
 dependencies:
   flutter:
     sdk: flutter 
-  cupertino_icons: ^1.0.2
-  equatable: ^2.0.5
   text_analyser: 
     path: packages/text_analyser
-  uuid: ^4.3.3
-  freezed_annotation: ^2.4.1
-  animated_tree_view: 2.2.0
-  lottie: ^2.7.0
-  font_awesome_flutter: ^10.6.0
-  bloc: ^8.1.2 
-  flutter_bloc: ^8.1.3
-  replay_bloc: ^0.2.5
-  enchanted_regex: ^1.0.7
-  hydrated_bloc: ^9.1.3 
-  go_router: ^14.2.1
-  google_fonts: ^6.2.1
-  enchanted_collection: 1.3.0
-  simple_platform: ^1.0.1
-  image_network: ^2.5.4+1
-  image_picker: ^1.0.4
-  image_picker_for_web: ^3.0.1
+  cupertino_icons:
+  equatable:
+  uuid:
+  freezed_annotation:
+  animated_tree_view:
+  lottie:
+  font_awesome_flutter:
+  bloc:
+  flutter_bloc:
+  replay_bloc:
+  enchanted_regex:
+  hydrated_bloc:
+  go_router:
+  google_fonts:
+  enchanted_collection:
+  simple_platform:
+  image_network:
+  image_picker:
+  image_picker_for_web:
   flutter_animate:
-  url_launcher: ^6.2.4
-  fluttertoast: ^8.2.4
-  dart_debouncer: ^1.1.0
-  dotted_border: ^2.1.0
-  cursor_autocomplete_options: ^1.5.0
-  path_provider: ^2.1.2
+  url_launcher:
+  fluttertoast:
+  dart_debouncer:
+  dotted_border:
+  cursor_autocomplete_options:
+  path_provider:
+  flex_color_scheme:
+  collection:
   media_query_core:
     path: packages/media_query_core
   commom_source:
@@ -62,25 +101,23 @@ dependencies:
   mason: 
     path: cloned_apis/mason
 
-  firebase_core: ^3.2.0
-  firebase_auth: ^5.1.2
-  firebase_storage: ^12.1.1
-  cloud_firestore: ^5.1.0
-  firebase_crashlytics: ^4.0.3
-  firebase_analytics: ^11.2.0
-  flex_color_scheme: ^7.3.1
-  collection:
+  firebase_core: 
+  firebase_auth: 
+  firebase_storage:
+  cloud_firestore: 
+  firebase_crashlytics: 
+  firebase_analytics:
 
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  flutter_launcher_icons: "^0.13.1"
-  build_runner: ^2.3.3 
-  json_serializable: ^6.7.1
-  freezed: ^2.3.2
+  flutter_lints:
+  flutter_launcher_icons:
+  build_runner:
+  json_serializable:
+  freezed:
 
 flutter_launcher_icons:
   image_path: "assets/visual_identity/raw_logo.PNG"
