--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ dependency_overrides:
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.1
   cloud_firestore: ^5.1.0
-  firebase_analytics: ^11.2.0 
+  firebase_analytics: ^11.2.0
+  scrollable_positioned_list: ^0.3.8
   # firebase_crashlytics: ^4.0.3
   # firebase_analytics:
   # firebase_core: ^2.24.2
@@ -67,6 +68,7 @@ dependencies:
     path: packages/text_analyser
   cupertino_icons:
   equatable:
+  scrollable_positioned_list:
   uuid:
   freezed_annotation:
   animated_tree_view:
