--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,18 +6,27 @@ version: 1.0.1
 
 dependency_overrides: 
   uuid: ^4.3.3
-  firebase_core: ^3.2.0
-  firebase_auth: ^5.1.2
-  firebase_storage: ^12.1.1
-  cloud_firestore: ^5.1.0
-  firebase_analytics: ^11.2.0
-  scrollable_positioned_list: ^0.3.8
+  
+  firebase_core: ^3.3.0
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
+  cloud_firestore: ^5.2.1
+  firebase_analytics: ^11.2.1
+  firebase_crashlytics: ^4.0.4
+
+  # firebase_core: ^3.2.0
+  # firebase_auth: ^5.1.2
+  # firebase_storage: ^12.1.1
+  # cloud_firestore: ^5.1.0
+  # firebase_analytics: ^11.2.0
+
   # firebase_crashlytics: ^4.0.3
   # firebase_analytics:
   # firebase_core: ^2.24.2
   # firebase_auth: ^4.16.0
   # firebase_storage: ^11.6.0
   # cloud_firestore: ^4.15.9
+  scrollable_positioned_list: ^0.3.8
   meta: 1.15.0
   test_api: ^0.7.3
   cupertino_icons: ^1.0.8
