--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependency_overrides:
   firebase_storage: ^12.1.3
   cloud_firestore: ^5.2.1
   firebase_analytics: ^11.2.1
-  firebase_crashlytics: ^4.0.4
+  # firebase_crashlytics: ^4.0.4
 
   # firebase_core: ^3.2.0
   # firebase_auth: ^5.1.2
