--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
         "**/*.freezed.dart": true,
         "**/*.g.dart": true,
         "**/*.h.dart": true,
-        "**/android/": true,
-        "**/ios/": true,
+        // "**/android/": true,
+        // "**/ios/": true,
         "**/linux/": true,
         // "**/macos/": true,
         // "**/build/": true,
