--- a/firebase.json
+++ b/firebase.json
@@ -1,55 +1,1 @@
-{
-    "hosting": {
-        "public": "build/web",
-        "ignore": [
-          "firebase.json",
-          "**/.*",
-          "**/node_modules/**"
-        ],
-        "rewrites": [
-          {
-            "source": "**",
-            "destination": "/index.html"
-          }
-        ]
-    },
-    "flutter": {
-        "platforms": {
-            "android": {
-                "default": {
-                    "projectId": "mustache-hub---prod",
-                    "appId": "1:667846746873:android:cb1cfa890c23a1aaacf828",
-                    "fileOutput": "android/app/google-services.json"
-                }
-            },
-            "ios": {
-                "default": {
-                    "projectId": "mustache-hub---prod",
-                    "appId": "1:667846746873:ios:c957e21d6863b221acf828",
-                    "uploadDebugSymbols": true,
-                    "fileOutput": "ios/Runner/GoogleService-Info.plist"
-                }
-            },
-            "macos": {
-                "default": {
-                    "projectId": "mustache-hub---prod",
-                    "appId": "1:667846746873:ios:c957e21d6863b221acf828",
-                    "uploadDebugSymbols": true,
-                    "fileOutput": "macos/Runner/GoogleService-Info.plist"
-                }
-            },
-            "dart": {
-                "lib/firebase_options.dart": {
-                    "projectId": "mustache-hub---prod",
-                    "configurations": {
-                        "android": "1:667846746873:android:cb1cfa890c23a1aaacf828",
-                        "ios": "1:667846746873:ios:c957e21d6863b221acf828",
-                        "macos": "1:667846746873:ios:c957e21d6863b221acf828",
-                        "web": "1:667846746873:web:3fb06a43ef8d4a70acf828",
-                        "windows": "1:667846746873:web:dcff0319c53220deacf828"
-                    }
-                }
-            }
-        }
-    }
-}
+{"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]},"flutter":{"platforms":{"android":{"default":{"projectId":"mustache-hub---prod","appId":"1:667846746873:android:cb1cfa890c23a1aaacf828","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"mustache-hub---prod","appId":"1:667846746873:ios:c957e21d6863b221acf828","uploadDebugSymbols":true,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"macos":{"default":{"projectId":"mustache-hub---prod","appId":"1:667846746873:ios:c957e21d6863b221acf828","uploadDebugSymbols":true,"fileOutput":"macos/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"mustache-hub---prod","configurations":{"android":"1:667846746873:android:cb1cfa890c23a1aaacf828","ios":"1:667846746873:ios:c957e21d6863b221acf828","macos":"1:667846746873:ios:c957e21d6863b221acf828","web":"1:667846746873:web:3fb06a43ef8d4a70acf828","windows":"1:667846746873:web:dcff0319c53220deacf828"}}}}}}
