--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,29 @@ version: 1.0.1
 
 dependency_overrides: 
   uuid: ^4.3.3
-  
-  firebase_core: ^3.3.0
-  firebase_auth: ^5.1.4
-  firebase_storage: ^12.1.3
-  cloud_firestore: ^5.2.1
+
   firebase_analytics: ^11.2.1
+  firebase_remote_config: ^5.0.4
+  firebase_core: ^3.3.0
+  firebase_storage: ^12.1.3
+  firebase_storage_web: ^3.9.12
+  cloud_firestore: ^5.2.1
+  cloud_firestore_web: ^4.1.1
+  firebase_crashlytics: ^4.0.4
+  firebase_messaging: ^15.0.4
+  
+  # firebase_core:
+  # firebase_auth:
+  # firebase_storage:
+  # cloud_firestore:
+  # firebase_analytics:
+  # firebase_crashlytics:
+  
+  # firebase_core: ^3.3.0
+  # firebase_auth: ^5.1.4
+  # firebase_storage: ^12.1.3
+  # cloud_firestore: ^5.2.1
+  # firebase_analytics: ^11.2.1
   # firebase_crashlytics: ^4.0.4
 
   # firebase_core: ^3.2.0
@@ -118,13 +135,15 @@ dependencies:
   mason: 
     path: cloned_apis/mason
 
-  firebase_core: 
-  firebase_auth: 
-  firebase_storage:
-  cloud_firestore: 
-  # firebase_crashlytics: 
-  firebase_analytics:
-
+  firebase_analytics: ^11.2.1
+  firebase_remote_config: ^5.0.4
+  firebase_core: ^3.3.0
+  firebase_storage: ^12.1.3
+  firebase_storage_web: ^3.9.12
+  cloud_firestore: ^5.2.1
+  cloud_firestore_web: ^4.1.1
+  firebase_crashlytics: ^4.0.4
+  firebase_messaging: ^15.0.4
   
 
 dev_dependencies:
