--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependency_overrides:
   json_serializable: ^6.8.0
   freezed: ^2.5.7
   test: ^1.25.8
-  lints: ^4.0.0 
+  lints: ^4.0.0
+  package_info_plus: ^8.0.2
   material_symbols_icons:
 
   mustachex: 
@@ -68,6 +69,8 @@ dependencies:
     sdk: flutter 
   text_analyser: 
     path: packages/text_analyser
+  package_info_plus:
+  firebase_auth:
   cupertino_icons:
   equatable:
   scrollable_positioned_list:
