--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: mustachehub
 description: "A easy, logic-less text template viewer/builder."
 publish_to: 'none'
 
-version: 1.0.1
+version: 1.2.0+1
 
 dependency_overrides: 
   uuid: ^4.3.3
